# python-poetry-setup

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: cicd.yml
docs/source/: conf.py  index.rst
src/: generate_uuids.py
test/: test_uuid_generation.py
