[tool.poetry]
name = "poetry-test"
version = "0.1.0"
description = "Learning poetry features"
authors = ["Bijeesh Chathoth <bijeesh.chathoth@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.31.0"
pytest = "^7.4.2"
pre-commit = "^3.4.0"
isort = "^5.12.0"
coverage = "^7.3.1"

[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
pylint = "^3.0.0a7"
mypy = "^1.4.1"



# NOTE: Ensure that all "line length" settings have the same value
#   - black
#   - pylint
#   - isort
#   - flake8 (this is in its own config file: .flake8 in the project root)
sphinx-rtd-theme = "^1.3.0"
sphinx-simplepdf = "^1.6.0"
pydantic = "^2.3.0"

[tool.black]
line-length = 120

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
